# MUQ

./: .gitignore  CMakeLists.txt  LICENSE  RunAllNotebooks.sh  Test.py  bitbucket-pipelines.yml  eigen.cereal  install  myBuildScript.sh  paper.bib  paper.md  readme.md
MUQ/: config.h  (+1 more)
examples/: CMakeLists.txt
examples/Approximation/GaussianProcess_CO2/: CMakeLists.txt  GaussianProcess_CO2.cpp  PlotSamples.py  ProcessData.py  meta.yml  test.inp
examples/Approximation/GaussianProcess_CO2/data/: MaunaLoaCO2.h5  ProcessData.py
examples/Approximation/MonotoneRegression/: CMakeLists.txt  MonotoneRegression.cpp  PlotResults.py  meta.yml
examples/Approximation/MonotoneRegression/results/: StressPredictions.h5
examples/Approximation/PolynomialChaos/: .gitignore  AdaptiveSmolyak-MixedDimensions.ipynb  AdaptiveSmolyakConstruction.ipynb  BeamModel.py  meta.yml
examples/Modeling/CustomModPiece/cpp/: BasicModPiece.cpp  CMakeLists.txt
examples/Modeling/CustomModPiece/python/: BasicModPiece.py  CustomModPiece.py
examples/Modeling/FenicsPiece/: EvaluationTest.ipynb
examples/Modeling/MemoryTest/cpp/: CMakeLists.txt  MemoryUsage.cpp  mymemory.h
examples/Modeling/MemoryTest/python/: ModPieceMemory.py
examples/Modeling/WorkGraphs/cpp/: CMakeLists.txt  SimpleWorkGraph.cpp  SplitSumWorkGraph.cpp
examples/Modeling/example-0/: CMakeLists.txt
examples/OtherApplications/PumpTest_Theis/: .gitignore  TheisInference.ipynb  meta.yml
examples/SamplingAlgorithms/MCMC/: .gitignore
modules/: CMakeLists.txt  RunParallelTests.cpp  RunTests.cpp
modules/Approximation/: CMakeLists.txt
modules/Approximation/python/: AllClassWrappers.h  CMakeLists.txt  GaussianWrapper.cpp  KLWrapper.cpp  KernelWrapper.cpp  Module.cpp  PolynomialsWrapper.cpp  QuadratureWrapper.cpp  module.cpp
modules/Approximation/src/: CMakeLists.txt
modules/Approximation/test/: CMakeLists.txt
modules/Inference/: CMakeLists.txt
modules/Inference/src/: CMakeLists.txt
modules/Modeling/python/: AllClassWrappers.h  CMakeLists.txt  CwiseUnaryOperatorsWrapper.cpp  DistributionWrapper.cpp  LinearOperatorWrapper.cpp  ModPieceWrapper.cpp  Module.cpp  ODEWrapper.cpp  PyAny.h  WorkPiecePython.cpp  WorkPieceWrapper.cpp
modules/Modeling/src/: AnyAlgebra.cpp  CMakeLists.txt  ConstantParameters.cpp  ConstantPiece.cpp  ConstantVector.cpp  GradientPiece.cpp  IdentityOperator.cpp  JacobianPiece.cpp  LinearSDE.cpp  ModGraphPiece.cpp  ModPiece.cpp  NodeNameFinder.cpp  ODE.cpp  ODEBase.cpp  ODEData.cpp  ODEPiece.cpp  OneStepCachePiece.cpp  PDEModPiece.cpp  PyModPiece.cpp  RootfindingIVP.cpp  ScalarAlgebra.cpp  SplitVector.cpp  SumPiece.cpp  WorkGraph.cpp  WorkGraphEdge.cpp  WorkGraphNode.cpp  WorkGraphPiece.cpp  WorkPiece.cpp
modules/Modeling/test/: AnyAlgebraTests.cpp  CMakeLists.txt  ConstantParametersTests.cpp  DerivativePieceTests.cpp  LinearSDETests.cpp  ModGraphPieceTests.cpp  ModPieceTests.cpp  ODEParallelTests.cpp  ODETests.cpp  PDEModPieceTests.py  RootfindingIVPTests.cpp  WorkGraphPieceTests.cpp  WorkGraphTests.cpp  WorkPieceDerivativesTests.cpp  WorkPieceTestClasses.h  WorkPieceTests.cpp
modules/Modelling/: CMakeLists.txt
modules/Modelling/src/: CMakeLists.txt  WorkPiece.cpp
modules/Modelling/test/: CMakeLists.txt  WorkPieceTestClasses.cpp  WorkPieceTestClasses.h  WorkPieceTests.cpp
modules/OptimalExperimentalDesign/python/: AllClassWrappers.h  CMakeLists.txt  EvidenceWrapper.cpp  Module.cpp  OEDResidualWrapper.cpp  UtilityWrapper.cpp
modules/OptimalExperimentalDesign/src/: CMakeLists.txt  Evidence.cpp  LogDifference.cpp  OEDResidual.cpp  Utility.cpp
modules/OptimalExperimentalDesign/test/: CMakeLists.txt  EvidenceTests.cpp  OEDResidualTests.cpp  UtilityTests.cpp
modules/Optimization/: CMakeLists.txt
modules/Optimization/python/: AllClassWrappers.h  CMakeLists.txt  Module.cpp  OptimizationWrapper.cpp
modules/Optimization/src/: CMakeLists.txt  CostFunction.cpp  NLoptOptimizer.cpp  Optimization.cpp  Optimizer.cpp  OptimizerBase.cpp
modules/Optimization/test/: CMakeLists.txt  CostFunctionTests.cpp  OptimizationTests.cpp  RosenbrockFunction.h
modules/PythonPackage/Approximation/: __init__.py
modules/SamplingAlgorithms/python/: AllClassWrappers.h  CMakeLists.txt  KernelWrapper.cpp  MCMCWrapper.cpp  ProblemWrapper.cpp  ProposalWrapper.cpp  SampleWrapper.cpp  module.cpp
modules/SamplingAlgorithms/src/: AMProposal.cpp  CMakeLists.txt  CrankNicolsonProposal.cpp  DILIKernel.cpp  DRKernel.cpp  Diagnostics.cpp  DistributedCollection.cpp  DummyKernel.cpp  ExpensiveSamplingProblem.cpp  FusedGMHKernel.cpp  GMHKernel.cpp  GreedyMLMCMC.cpp  IPKernel.cpp  ImportanceSampling.cpp  InverseGammaProposal.cpp  MALAProposal.cpp  MCKernel.cpp  MCMC.cpp  MCMCFactory.cpp  MCMCKernel.cpp  MCMCProposal.cpp  MHKernel.cpp  MHProposal.cpp  MIKernel.cpp  MIMCMC.cpp  MIMCMCBox.cpp  MarkovChain.cpp  MonteCarlo.cpp  ParallelAMProposal.cpp  ParallelMHKernel.cpp  SLMCMC.cpp  SampleCollection.cpp  SamplingAlgorithm.cpp  SamplingProblem.cpp  SamplingState.cpp  SingleChainMCMC.cpp  SubsamplingMIProposal.cpp  TransitionKernel.cpp
modules/SamplingAlgorithms/test/: .#DistributedCollectionTests.cpp  CMakeLists.txt  CrankNicolsonTests.cpp  DILITests.cpp  DelayedRejectionTests.cpp  DistributedCollectionTests.cpp  ExpensiveSamplingProblemParallelTests.cpp  ExpensiveSamplingProblemTests.cpp  GMHKernelParallelTests.cpp  GMHKernelTests.cpp  ImportanceSamplingParallelTests.cpp  ImportanceSamplingTests.cpp  InfMALATests.cpp  InverseGammaProposalTests.cpp  MCMCTests.cpp  MIMCMCTests.cpp  MLMCMCTests.cpp  MarkovChainTests.cpp  MonteCarloTests.cpp  SampleCollectionTests.cpp  SamplingProblemTests.cpp  SamplingStateParallelTests.cpp  SingleChainMCMCParallelTests.cpp
modules/Utilities/: CMakeLists.txt
modules/Utilities/python/: AllClassWrappers.h  CMakeLists.txt  GeneralUtilitiesWrapper.cpp  HDF5Wrapper.cpp  LinearAlgebraWrapper.cpp  MultiIndicesWrapper.cpp  module.cpp
modules/Utilities/src/: CMakeLists.txt  PyDictConversion.cpp  RandomGenerator.cpp  SaveSchedulerBase.cpp
modules/Utilities/test/: CMakeLists.txt  RandomGeneratorTest.cpp
(+1443 files in other folders)
