cmake_minimum_required (VERSION 3.10)

project(GaussianInverseGamma)

if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR) # Only look for MUQ when building example as standalone project
  find_package(MUQ REQUIRED)

  include_directories(${MUQ_INCLUDE_DIRS})

  set(CMAKE_CXX_FLAGS ${MUQ_CXX_FLAGS})
  set(CMAKE_CXX_COMPILER ${MUQ_CXX_COMPILER})
endif()


add_executable(GaussianGammaSampling GaussianGammaSampling.cpp)
target_link_libraries(GaussianGammaSampling ${MUQ_LIBRARIES} ${MUQ_LINK_LIBRARIES})
